No Manual Job Sorting
This patch simplifies the service registry code, replaces internal
functionality with Java streams and removes the unnecessary manual
sorting of jobs since they are sorted by the database already.